--- a/patient-otp-service/pom.xml
+++ b/patient-otp-service/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -55,7 +55,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
@@ -70,48 +69,37 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.10</version>
+            <version>1.18.26</version>
             <scope>provided</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>23.0</version>
+            <version>32.1.1-jre</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
         <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>javax.mail-api</artifactId>
             <version>1.6.2</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
-            <version>2.5.4</version>
+            <version>3.0.4</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
-            <version>5.5.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
+            <version>6.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>3.2.4</version>
+            <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -133,52 +121,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <!--  <build>-->
-    <!--    <pluginManagement>&lt;!&ndash; lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) &ndash;&gt;-->
-    <!--      <plugins>-->
-    <!--        &lt;!&ndash; clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle &ndash;&gt;-->
-    <!--        <plugin>-->
-    <!--          <artifactId>maven-clean-plugin</artifactId>-->
-    <!--          <version>3.1.0</version>-->
-    <!--        </plugin>-->
-    <!--        &lt;!&ndash; default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging &ndash;&gt;-->
-    <!--        <plugin>-->
-    <!--          <artifactId>maven-resources-plugin</artifactId>-->
-    <!--          <version>3.0.2</version>-->
-    <!--        </plugin>-->
-    <!--        <plugin>-->
-    <!--          <artifactId>maven-compiler-plugin</artifactId>-->
-    <!--          <version>3.8.0</version>-->
-    <!--        </plugin>-->
-    <!--        <plugin>-->
-    <!--          <artifactId>maven-surefire-plugin</artifactId>-->
-    <!--          <version>2.22.1</version>-->
-    <!--        </plugin>-->
-    <!--        <plugin>-->
-    <!--          <artifactId>maven-jar-plugin</artifactId>-->
-    <!--          <version>3.0.2</version>-->
-    <!--        </plugin>-->
-    <!--        <plugin>-->
-    <!--          <artifactId>maven-install-plugin</artifactId>-->
-    <!--          <version>2.5.2</version>-->
-    <!--        </plugin>-->
-    <!--        <plugin>-->
-    <!--          <artifactId>maven-deploy-plugin</artifactId>-->
-    <!--          <version>2.8.2</version>-->
-    <!--        </plugin>-->
-    <!--        &lt;!&ndash; site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle &ndash;&gt;-->
-    <!--        <plugin>-->
-    <!--          <artifactId>maven-site-plugin</artifactId>-->
-    <!--          <version>3.7.1</version>-->
-    <!--        </plugin>-->
-    <!--        <plugin>-->
-    <!--          <artifactId>maven-project-info-reports-plugin</artifactId>-->
-    <!--          <version>3.0.0</version>-->
-    <!--        </plugin>-->
-    <!--      </plugins>-->
-    <!--    </pluginManagement>-->
-    <!--  </build>-->
     <build>
         <plugins>
             <plugin>
